Fix overflow property and adjust toggle position in CSS

--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body {
   border-radius: 30px;
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
   position: absolute;
-  /* overflow: hidden; */
+  overflow: hidden;
   width: 768px;
   max-width: 100%;
   min-height: 460px;
@@ -149,32 +149,31 @@ body {
   left: 50%;
   width: 50%;
   height: 100%;
-  /* overflow: hidden; */
+  overflow: hidden;
   transition: all 0.6s ease-in-out;
   border-radius: 150px 0 0 100px;
   z-index: 100;
 }
-
 .container.active .toggle-container {
   transform: translateX(-100%);
   border-radius: 0 150px 100px 0;
 }
 
 .toggle {
+	position: absolute; 
   background-color: #512da8;
   height: 100%;
   background: linear-gradient(to right, #5c6bc0, #512da8);
   color: #fff;
-  left: -100%;
-  height: 100%;
+  left: 0%;
   width: 200%;
-  transform: translateX(0);
+  transform: translateX(0);	
   transition: all 0.6s ease-in-out;
 }
-
 .container.active .toggle {
-  transform: translateX(50%);
+  transform: translateX(-50%);
 }
+
 .toggle-panel {
   position: absolute;
   width: 50%;
@@ -195,12 +194,12 @@ body {
 }
 
 .container.active .toggle-left{
-	transform: translateX(0);
+	transform: translateX(100%);
 }
 
 .toggle-right {
   right: 0;
-  transform: translateX(0);
+  transform: translateX(-100%);
 }
 
 .container.active .toggle-right{
